JumpScript/tests/baselines/reference/parserClassDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.jump(1,17): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.jump(1,19): error TS1172: 'extends' clause already seen.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.jump (2 errors) ====
    class C extends A extends B {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
    }